# bitcoin

./: .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  Makefile.am  configure.ac  libbitcoinkernel.pc.in  test_chainstate.py  test_wrapper.py  timeout-8968fff41e23f31c0e704cd01b7706b86fccdc0b
build_msvc/: .gitignore  bitcoin.sln  msvc-autogen.py
cmake/: introspection.cmake
contrib/: gitian-build.py
depends/: Makefile  README.md  funcs.mk
doc/: build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  release-notes-28113.md  release-notes-31175.md  release-notes-31483.md
src/: CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrman.cpp  banman.cpp  bitcoin-chainstate-wrapper.cpp  bitcoin-chainstate-wrapper.h  bitcoin-chainstate.c  bitcoin-chainstate.cpp  bitcoin-cli.cpp  bitcoin-mine.cpp  bitcoin-sigops.cpp  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoind.cpp  bitcoinkernel.h  blockencodings.cpp  chain.h  chainparams.cpp  chainparams.h  coins.h  (+64 more)
src/util/: CMakeLists.txt  args.cpp  args.h  batchpriority.cpp  bitset.h  byte_conversion.h  byte_units.h  chaintype.cpp  chaintype.h  epochguard.h  exception.cpp  feefrac.h  fs.cpp  fs.h  fs_helpers.cpp  fs_helpers.h  immediate_task_queue.cpp  immediate_task_queue.h  immediate_task_runner.cpp  insert.h  overflow.h  result.h  shell.cpp  shell.h  signalinterrupt.h  system.cpp  system.h  task_queue_interface.h  task_runner.h  threadinterrupt.h  threadpool.h  time.h
(+381 files in other folders)
